--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@
 
 # dependencies
 /node_modules
+backend/node_modules/
 /.pnp
 .pnp.js
+backend/ec2-key-pair.pem
 
 # testing
 /coverage
@@ -17,6 +19,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 npm-debug.log*
 yarn-debug.log*
