--- a/backend/package.json
+++ b/backend/package.json
@@ -11,5 +11,13 @@
     "url": "gd11"
   },
   "author": "ulemj & saruul",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "node": "^22.4.0",
+    "pg": "^8.12.0",
+    "sequelize": "^6.37.3"
+  }
 }
